// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots cell align center 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-187b6yg=""
      role="cell"
      style={Object {}}
    >
      Cell aligned 
      center
    </div>
  </div>
</div>
`;

exports[`Storyshots cell align left 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Cell aligned 
      left
    </div>
  </div>
</div>
`;

exports[`Storyshots cell align right 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-lbxvqf=""
      role="cell"
      style={Object {}}
    >
      Cell aligned 
      right
    </div>
  </div>
</div>
`;

exports[`Storyshots cell auto style anchor tag 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      <a
        href="https://duckduckgo.com"
      >
        Native anchor tag
      </a>
    </div>
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Cell 2
    </div>
  </div>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      <a
        data-css-1skajya=""
        href="https://duckduckgo.com"
      >
        Link component with anchor tag
      </a>
    </div>
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Cell 2
    </div>
  </div>
</div>
`;

exports[`Storyshots cell custom className 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      className="some-classname"
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      cell text
    </div>
  </div>
</div>
`;

exports[`Storyshots cell custom style 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={
        Object {
          "outline": "1px solid red",
        }
      }
    >
      cell text
    </div>
  </div>
</div>
`;

exports[`Storyshots cell emphasis text 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1uhs7p8=""
      role="cell"
      style={Object {}}
    >
      em-PHA-sis
    </div>
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Non emphasized
    </div>
  </div>
</div>
`;

exports[`Storyshots cell empty 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`Storyshots cell flex 1 | 4 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={
        Object {
          "flex": "1",
        }
      }
    >
      Flex 1 Flex 1 Flex 1 Flex 1 Flex 1 Flex 1 Flex 1 Flex 1
    </div>
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={
        Object {
          "flex": "4",
        }
      }
    >
      Flex 4 Flex 4 Flex 4 Flex 4 Flex 4 Flex 4 Flex 4 Flex 4
    </div>
  </div>
</div>
`;

exports[`Storyshots cell flex 2 | 1 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={
        Object {
          "flex": "2",
        }
      }
    >
      Flex 2
    </div>
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={
        Object {
          "flex": "1",
        }
      }
    >
      Flex 1
    </div>
  </div>
</div>
`;

exports[`Storyshots cell flex, multiple cell, multiple row 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={
        Object {
          "flex": "2",
        }
      }
    >
      Flex 2
    </div>
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={
        Object {
          "flex": "1",
        }
      }
    >
      Flex 1
    </div>
  </div>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={
        Object {
          "flex": "2",
        }
      }
    >
      Flex 2
    </div>
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={
        Object {
          "flex": "1",
        }
      }
    >
      Flex 1
    </div>
  </div>
</div>
`;

exports[`Storyshots cell inner padding 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell
    </div>
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell
    </div>
  </div>
</div>
`;

exports[`Storyshots cell multiple text 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Cell 1 text
    </div>
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Cell 2 text
    </div>
  </div>
</div>
`;

exports[`Storyshots cell text 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Cell text
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align center 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ojv4g6=""
      role="columnheader"
      style={Object {}}
    >
      Header aligned center
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align center w/ sort 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ojv4g6=""
      role="columnheader"
      style={Object {}}
    >
      Header sortable, aligned center
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align left 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      Header aligned left
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align left w/ sort 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      Header sortable, aligned left
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align right 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-168e5py=""
      role="columnheader"
      style={Object {}}
    >
      Header aligned right
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align right w/ sort 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-168e5py=""
      role="columnheader"
      style={Object {}}
    >
      Header sortable, aligned right
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader custom className 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      className="some-classname"
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      header text
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader custom style 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={
        Object {
          "outline": "1px solid red",
        }
      }
    >
      column header
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader long, align center w/ sort 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ojv4g6=""
      role="columnheader"
      style={Object {}}
    >
       Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable, aligned center
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
    <div
      data-css-1ojv4g6=""
      role="columnheader"
      style={Object {}}
    >
      Short header, same align
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader long, align left w/ sort 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
       Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable, aligned left
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      Short header, same align
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader long, align right w/ sort 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-168e5py=""
      role="columnheader"
      style={Object {}}
    >
       Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable, aligned right
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
    <div
      data-css-168e5py=""
      role="columnheader"
      style={Object {}}
    >
      Short header, same align
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort asc 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      sorted header
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          aria-label="sort ascending icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15.173l-2.236-2.23a.5.5 0 00-.707 0l-.703.703a.5.5 0 000 .708l4.292 4.292a.5.5 0 00.708 0l4.292-4.292a.5.5 0 000-.708l-.703-.703a.5.5 0 00-.707 0L13 15.173V6.5a.5.5 0 00-.5-.5h-1a.5.5 0 00-.5.5v8.673z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort asc w/ onClick 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <button
      data-css-17bxdv1=""
      onClick={[Function]}
      role="columnheader"
      style={Object {}}
    >
      active header
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          aria-label="sort ascending icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15.173l-2.236-2.23a.5.5 0 00-.707 0l-.703.703a.5.5 0 000 .708l4.292 4.292a.5.5 0 00.708 0l4.292-4.292a.5.5 0 000-.708l-.703-.703a.5.5 0 00-.707 0L13 15.173V6.5a.5.5 0 00-.5-.5h-1a.5.5 0 00-.5.5v8.673z"
          />
        </svg>
      </div>
    </button>
    <button
      data-css-1monnrb=""
      onClick={[Function]}
      role="columnheader"
      style={Object {}}
    >
      other sortable
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </button>
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      no sort
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort default 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      header text
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort default w/ onClick 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <button
      data-css-1monnrb=""
      onClick={[Function]}
      role="columnheader"
      style={Object {}}
    >
      active header
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </button>
    <button
      data-css-1monnrb=""
      onClick={[Function]}
      role="columnheader"
      style={Object {}}
    >
      other sortable
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort desc 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      sorted header
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          aria-label="sort descending icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M13 8.827l2.236 2.23a.5.5 0 00.707 0l.703-.703a.5.5 0 000-.708l-4.292-4.292a.5.5 0 00-.708 0L7.354 9.646a.5.5 0 000 .708l.703.703a.5.5 0 00.707 0L11 8.827V17.5a.5.5 0 00.5.5h1a.5.5 0 00.5-.5V8.827z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort desc w/ onClick 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <button
      data-css-17bxdv1=""
      onClick={[Function]}
      role="columnheader"
      style={Object {}}
    >
      active header
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          aria-label="sort descending icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M13 8.827l2.236 2.23a.5.5 0 00.707 0l.703-.703a.5.5 0 000-.708l-4.292-4.292a.5.5 0 00-.708 0L7.354 9.646a.5.5 0 000 .708l.703.703a.5.5 0 00.707 0L11 8.827V17.5a.5.5 0 00.5.5h1a.5.5 0 00.5-.5V8.827z"
          />
        </svg>
      </div>
    </button>
    <button
      data-css-1monnrb=""
      onClick={[Function]}
      role="columnheader"
      style={Object {}}
    >
      other sortable
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </button>
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      no sort
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader text 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      header text
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader w/ drawers 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-1gk8y86=""
    role="row"
  >
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      header text
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      header2 text
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    data-css-1fq8nx6=""
  >
    <div
      data-css-1oot5vc=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          data-css-prsp0g=""
          role="row"
        >
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={Object {}}
          >
            cell text
          </div>
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={Object {}}
          >
            cell2 text
          </div>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand"
          data-css-7jbmom=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-1i2htk9=""
    >
      <div
        data-css-1j3g0qd=""
      >
        Panel contnet
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader w/ rows 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      header text
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
    <div
      data-css-1ky1czx=""
      role="columnheader"
      style={Object {}}
    >
      header2 text
      <div
        data-css-1pv1hob=""
        data-css-otejxm=""
      >
        <svg
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      cell text
    </div>
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      cell2 text
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer mulitple 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-1fq8nx6=""
  >
    <div
      data-css-1oot5vc=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          data-css-prsp0g=""
          role="row"
        >
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={Object {}}
          >
            wow
          </div>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand"
          data-css-7jbmom=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-1i2htk9=""
    >
      <div
        data-css-1j3g0qd=""
      >
        This is panel content
      </div>
    </div>
  </div>
  <div
    data-css-1fq8nx6=""
  >
    <div
      data-css-1oot5vc=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          data-css-prsp0g=""
          role="row"
        >
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={Object {}}
          >
            wow
          </div>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand"
          data-css-7jbmom=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-1i2htk9=""
    >
      <div
        data-css-1j3g0qd=""
      >
        This is panel content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer nested table 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-1fq8nx6=""
  >
    <div
      data-css-i9wfit=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          data-css-prsp0g=""
          role="row"
        >
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={Object {}}
          >
            Parent Cell
          </div>
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={Object {}}
          >
            Parent Cell
          </div>
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={Object {}}
          >
            Parent Cell
          </div>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Collapse"
          data-css-7jbmom=""
          onClick={[Function]}
        >
          <div
            data-css-xnveog=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-ule0ur=""
    >
      <div
        data-css-1j3g0qd=""
      >
        <div
          data-css-1tpis1h=""
          role="table"
        >
          <div
            data-css-prsp0g=""
            role="row"
          >
            <div
              data-css-1cc2f5z=""
              role="cell"
              style={Object {}}
            >
              Child Cell
            </div>
            <div
              data-css-1cc2f5z=""
              role="cell"
              style={Object {}}
            >
              Child Cell
            </div>
            <div
              data-css-1cc2f5z=""
              role="cell"
              style={Object {}}
            >
              Child Cell
            </div>
          </div>
          <div
            data-css-prsp0g=""
            role="row"
          >
            <div
              data-css-1cc2f5z=""
              role="cell"
              style={Object {}}
            >
              Child Cell
            </div>
            <div
              data-css-1cc2f5z=""
              role="cell"
              style={Object {}}
            >
              Child Cell
            </div>
            <div
              data-css-1cc2f5z=""
              role="cell"
              style={Object {}}
            >
              Child Cell
            </div>
          </div>
          <div
            data-css-prsp0g=""
            role="row"
          >
            <div
              data-css-1cc2f5z=""
              role="cell"
              style={Object {}}
            >
              Child Cell
            </div>
            <div
              data-css-1cc2f5z=""
              role="cell"
              style={Object {}}
            >
              Child Cell
            </div>
            <div
              data-css-1cc2f5z=""
              role="cell"
              style={Object {}}
            >
              Child Cell
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer single 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-1fq8nx6=""
  >
    <div
      data-css-1oot5vc=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          data-css-prsp0g=""
          role="row"
        >
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={Object {}}
          >
            wow
          </div>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand"
          data-css-7jbmom=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-1i2htk9=""
    >
      <div
        data-css-1j3g0qd=""
      >
        This is panel content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer w/ flex, some wrap, some not 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-1fq8nx6=""
  >
    <div
      data-css-1oot5vc=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          data-css-prsp0g=""
          role="row"
        >
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={
              Object {
                "flex": "2",
              }
            }
          >
            flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2
          </div>
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={
              Object {
                "flex": "1",
              }
            }
          >
            flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1
          </div>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand"
          data-css-7jbmom=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-1i2htk9=""
    >
      <div
        data-css-1j3g0qd=""
      >
        This is panel content
      </div>
    </div>
  </div>
  <div
    data-css-1fq8nx6=""
  >
    <div
      data-css-1oot5vc=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          data-css-prsp0g=""
          role="row"
        >
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={
              Object {
                "flex": "2",
              }
            }
          >
            flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2
          </div>
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={
              Object {
                "flex": "1",
              }
            }
          >
            flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1
          </div>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand"
          data-css-7jbmom=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-1i2htk9=""
    >
      <div
        data-css-1j3g0qd=""
      >
        This is panel content
      </div>
    </div>
  </div>
  <div
    data-css-1fq8nx6=""
  >
    <div
      data-css-1oot5vc=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          data-css-prsp0g=""
          role="row"
        >
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={
              Object {
                "flex": "2",
              }
            }
          >
            flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2
          </div>
          <div
            data-css-1cc2f5z=""
            role="cell"
            style={
              Object {
                "flex": "1",
              }
            }
          >
            flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1
          </div>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand"
          data-css-7jbmom=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-1i2htk9=""
    >
      <div
        data-css-1j3g0qd=""
      >
        This is panel content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots row custom className 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    className="some-class"
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      innocuous
    </div>
  </div>
</div>
`;

exports[`Storyshots row custom style 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
    style={
      Object {
        "outline": "1px solid red",
      }
    }
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      innocuous
    </div>
  </div>
</div>
`;

exports[`Storyshots row multiple rows 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Something on a row
    </div>
  </div>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Something on a row
    </div>
  </div>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Something on a row
    </div>
  </div>
</div>
`;

exports[`Storyshots row one row, content 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      Something on a row
    </div>
  </div>
</div>
`;

exports[`Storyshots row one row, empty 1`] = `
<div
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  />
</div>
`;

exports[`Storyshots table custom className 1`] = `
<div
  className="some-class"
  data-css-d303pi=""
  role="table"
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      innocuous
    </div>
  </div>
</div>
`;

exports[`Storyshots table custom style 1`] = `
<div
  data-css-d303pi=""
  role="table"
  style={
    Object {
      "outline": "1px solid red",
    }
  }
>
  <div
    data-css-prsp0g=""
    role="row"
  >
    <div
      data-css-1cc2f5z=""
      role="cell"
      style={Object {}}
    >
      innocuous
    </div>
  </div>
</div>
`;

exports[`Storyshots table empty 1`] = `
<div
  data-css-d303pi=""
  role="table"
/>
`;
